--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html>
-
-  <head>
+<head>
+    <title>JosevDevApps | ANDROID | GAMES</title>
     <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        background-color: #282c34;
-        color: #61dafb;
-        font-family: 'Arial', sans-serif;
-        font-size: 2em;
-        text-align: center;
-      }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f8fc;
+            color: #333;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+        a {
+            font-size: 1.2em;
+            color: #333;
+            margin: 0 10px;
+            text-decoration: none;
+            border-bottom: 2px solid #333;
+        }
+        a:hover {
+            color: #666;
+        }
     </style>
-  </head>
+</head>
+<body>
+    <h1>JosevDevApps | ANDROID | GAMES</h1>
 
-  <body>
-    <div>JBM Dev | Unity | Android</div>
-    <a href="policy.html">Policy</a>
-  </body>
-
+    <div>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Service</a>
+    </div>
+</body>
 </html>
