--- a/terms.html
+++ b/terms.html
@@ -121,7 +121,7 @@
         <p>Some states do not allow the exclusion of implied warranties or limitation of liability for incidental or
             consequential damages, which means that some of the above limitations may not apply. In these states, each
             party's liability will be limited to the greatest extent permitted by law.</p>
-        <h2><AS IS and AS AVAILABLE Disclaimer</h2>
+        <h2>AS IS and AS AVAILABLE Disclaimer</h2>
         <p>The Service is provided to You AS IS and AS AVAILABLE and with all faults and defects
             without warranty of any kind. To the maximum extent permitted under applicable law, the Company, on its own
             behalf and on behalf of its Affiliates and its and their respective licensors and service providers,
